<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

<!-- Nav Bar-->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="1"
            android:columnCount="4"
            android:background="#3F51B5"
            tools:context=".MainActivity">

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:background="#3F51B5">
                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:text="@string/txtTrangChu"
                    android:textAlignment="center"
                    android:textColor="#111111"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:background="#888888">
                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:text="@string/txtDanhMuc"
                    android:textAlignment="center"
                    android:textColor="#111111"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:background="#3F51B5">
                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:text="@string/txtDonHang"
                    android:textAlignment="center"
                    android:textColor="#111111"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:background="#888888">
                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:text="@string/txtCaNhan"
                    android:textAlignment="center"
                    android:textColor="#111111"/>
            </LinearLayout>
        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>